--- a/style.css
+++ b/style.css
@@ -391,7 +391,7 @@ background-color: rgb(117,117,117);
  
   .prograss{
     /* width : 0%; */
-    transition-delay: 1s;
+    /* transition-delay: 1s; */
     transition: 1s;
     transition-timing-function: ease-out;
   }
