--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     user-select: none;
     font-family: Montserrat, sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 body{
     background-color: #000;
