--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     padding: 0;
     user-select: none;
     font-family: Montserrat, sans-serif;
-    overflow-x: hidden;
 }
 body{
     background-color: #000;
@@ -130,6 +129,7 @@ background-color: rgb(117,117,117);
   width: 93%;
 }
 .spaceBetweenRow{
+  overflow: hidden;
   flex-wrap: wrap;
     margin-top: 20px;
     position: relative;
